-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.5.0
-
Ubuntu 22.04
X11
Gnome 42.5
Yaru-dark theme
-
-
574a47dd5 (dev), 51dc94df9 (6.6), 7bdd6247a (6.5.2), e6e545f8a (6.5)
I've built Qt-Creator v10.0.0 with Qt 6.5.0 and I have the following strange styles:

There was no such problem with v9.0.2 and Qt 6.4.2. Is something built incorrectly?
- is duplicated by
-
QTBUG-113801 Comboboxes changes style/ color when dragging the application window on linux
-
- Closed
-